tests/NormalTests/paczka1/fuzzy1/10148084.err
Error in line 8: 1c4jOpk5 A606 72,3
Error in line 5: twC5 S667 22,1
Error in line 22: jCE6 S997 221,4
Error in line 31: Ve10prrV A606 34,0
